apps/home/game/bookatlas/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookatlas
  namespace: game
spec:
  template:
    spec:
      containers:
        - name: caddy
          volumeMounts:
            - name: site
              mountPath: /srv
      volumes:
        - name: site
          persistentVolumeClaim:
            claimName: bookatlas-data-pvc
