apps/home/game/bookatlas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookatlas
  namespace: game
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bookatlas.superkooka.com
      secretName: bookatlas-tls
  rules:
    - host: bookatlas.superkooka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookatlas-service
                port:
                  number: 80
